--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,15 @@
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en");
+
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
+  font-family: 'Open Sans', helvetica, arial, sans-serif;
+  color: #676a6c;
 }
 
 .main-content {
 	margin-top: 40px;
-	min-height: 500px;
+	min-height: 490px;
 	margin-bottom: 40px;
 }
 
