--- a/public/css/app.css
+++ b/public/css/app.css
@@ -48,7 +48,7 @@ thead {
 	border-top: solid 2px #ddd;
 }
 
-.img-thumbnail, 
+/*.img-thumbnail, 
 .thumbnail, 
 .well, 
 .panel, 
@@ -57,7 +57,7 @@ thead {
 .container-fluid .jumbotron,
 .panel-heading {
 	border-radius: 0;
-}
+}*/
 
 .shipping-schema {
     /*margin-top: 50px;*/
@@ -117,4 +117,8 @@ thead {
     font-size: 11px;
     line-height: 16px;
     font-weight: bold;
+}
+
+h1 {
+    margin-top: 0;
 }
