--- a/public/css/app.css
+++ b/public/css/app.css
@@ -54,12 +54,12 @@ tfoot {
 	border-bottom: solid 2px #ddd;
 }
 
-/*.img-thumbnail, 
-.thumbnail, 
-.well, 
-.panel, 
-.alert, 
-.container .jumbotron, 
+/*.img-thumbnail,
+.thumbnail,
+.well,
+.panel,
+.alert,
+.container .jumbotron,
 .container-fluid .jumbotron,
 .panel-heading {
 	border-radius: 0;
@@ -127,4 +127,8 @@ tfoot {
 
 h1 {
     margin-top: 0;
+}
+
+.table-responsive {
+    overflow-x: auto;
 }
